--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,6 @@ dependencies = [
     "python-dotenv==1.0.0",
     "requests==2.32.0",
     "rich==13.7.0",
+    "sqlfluff>=3.4.2",
     "structlog==24.1.0",
 ]
