add enrichment scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "polars==1.9.0",
     "prefect==2.20.0",
     "prefect-docker==0.5.0",
+    "pyarrow>=21.0.0",
+    "pycountry>=24.6.1",
+    "pycountry-convert>=0.7.2",
     "pydantic==2.9.0",
     "pydantic-settings==2.5.0",
     "pytest==8.3.0",
