--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,40 @@
+# IDE
 .vscode/
 .working/
 
+# Env
 .env
 .venv/
 
+# dbt
 dbt/data
 dbt/logs/
 dbt/target/
 dbt/dbt_packages/
 
-data/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
