--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Main data processing and dbt service
   data-pipeline:
@@ -17,55 +15,77 @@ services:
       - LOG_LEVEL=INFO
     networks:
       - music-tracker
-    depends_on:
-      - metabase
+    # depends_on:
+    #   - metabase  # Commented out since Metabase is disabled
     restart: unless-stopped
 
-  # Metabase for reporting
-  metabase:
-    image: metabase/metabase:latest
-    container_name: music-tracker-metabase
-    ports:
-      - "3000:3000"
-    volumes:
-      - metabase-data:/metabase-data
-    environment:
-      - MB_DB_TYPE=postgres
-      - MB_DB_DBNAME=metabase
-      - MB_DB_PORT=5432
-      - MB_DB_USER=metabase
-      - MB_DB_PASS=${METABASE_DB_PASSWORD}
-      - MB_DB_HOST=metabase-db
-    networks:
-      - music-tracker
-    depends_on:
-      - metabase-db
-    restart: unless-stopped
+  # # Metabase for reporting (COMMENTED OUT)
+  # metabase:
+  #   image: metabase/metabase:latest
+  #   container_name: music-tracker-metabase
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - metabase-data:/metabase-data
+  #   environment:
+  #     - MB_DB_TYPE=postgres
+  #     - MB_DB_DBNAME=metabase
+  #     - MB_DB_PORT=5432
+  #     - MB_DB_USER=metabase
+  #     - MB_DB_PASS=${METABASE_DB_PASSWORD}
+  #     - MB_DB_HOST=metabase-db
+  #   networks:
+  #     - music-tracker
+  #   depends_on:
+  #     - metabase-db
+  #   restart: unless-stopped
 
-  # PostgreSQL for Metabase metadata
-  metabase-db:
-    image: postgres:15-alpine
-    container_name: music-tracker-metabase-db
-    environment:
-      - POSTGRES_DB=metabase
-      - POSTGRES_USER=metabase
-      - POSTGRES_PASSWORD=${METABASE_DB_PASSWORD}
-    volumes:
-      - metabase-db-data:/var/lib/postgresql/data
-    networks:
-      - music-tracker
-    restart: unless-stopped
+  # # PostgreSQL for Metabase metadata (COMMENTED OUT)
+  # metabase-db:
+  #   image: postgres:15-alpine
+  #   container_name: music-tracker-metabase-db
+  #   environment:
+  #     - POSTGRES_DB=metabase
+  #     - POSTGRES_USER=metabase
+  #     - POSTGRES_PASSWORD=${METABASE_DB_PASSWORD}
+  #   volumes:
+  #     - metabase-db-data:/var/lib/postgresql/data
+  #   networks:
+  #     - music-tracker
+  #   restart: unless-stopped
 
   # Prefect for orchestration
   prefect-server:
-    image: prefecthq/prefect:latest
+    image: prefecthq/prefect:2-latest
     container_name: music-tracker-prefect
     ports:
       - "4200:4200"
     environment:
       - PREFECT_API_URL=http://localhost:4200/api
+      - PREFECT_SERVER_API_HOST=0.0.0.0
+      - PREFECT_SERVER_API_PORT=4200
+      - PREFECT_DATABASE_CONNECTION_URL=postgresql+asyncpg://prefect:${PREFECT_DB_PASSWORD}@prefect-db:5432/prefect
+      - PREFECT_ORION_DATABASE_CONNECTION_URL=postgresql+asyncpg://prefect:${PREFECT_DB_PASSWORD}@prefect-db:5432/prefect
+      - PREFECT_SERVER_ANALYTICS_ENABLED=false
     volumes:
       - prefect-data:/opt/prefect
+    networks:
+      - music-tracker
+    depends_on:
+      - prefect-db
+    restart: unless-stopped
+    command: prefect server start --host 0.0.0.0 --port 4200
+
+  # PostgreSQL for Prefect
+  prefect-db:
+    image: postgres:15-alpine
+    container_name: music-tracker-prefect-db
+    environment:
+      - POSTGRES_DB=prefect
+      - POSTGRES_USER=prefect
+      - POSTGRES_PASSWORD=${PREFECT_DB_PASSWORD}
+    volumes:
+      - prefect-db-data:/var/lib/postgresql/data
     networks:
       - music-tracker
     restart: unless-stopped
@@ -74,6 +94,7 @@ volumes:
   metabase-data:
   metabase-db-data:
   prefect-data:
+  prefect-db-data:
 
 networks:
   music-tracker:
