not happy with grok code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
   # Prefect for orchestration
   prefect-server:
-    image: prefecthq/prefect:2-latest
+    image: prefecthq/prefect:3.4.0-python3.11
     container_name: music-tracker-prefect
     ports:
       - "4200:4200"
@@ -64,8 +64,7 @@ services:
       - PREFECT_API_URL=http://localhost:4200/api
       - PREFECT_SERVER_API_HOST=0.0.0.0
       - PREFECT_SERVER_API_PORT=4200
-      - PREFECT_DATABASE_CONNECTION_URL=postgresql+asyncpg://prefect:${PREFECT_DB_PASSWORD}@prefect-db:5432/prefect
-      - PREFECT_ORION_DATABASE_CONNECTION_URL=postgresql+asyncpg://prefect:${PREFECT_DB_PASSWORD}@prefect-db:5432/prefect
+      - PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://prefect:${PREFECT_DB_PASSWORD}@prefect-db:5432/prefect
       - PREFECT_SERVER_ANALYTICS_ENABLED=false
     volumes:
       - prefect-data:/opt/prefect
@@ -81,7 +80,7 @@ services:
     container_name: music-tracker-prefect-agent
     environment:
       - PREFECT_API_URL=http://prefect-server:4200/api
-      - PREFECT_AGENT_POOL_NAME=default-agent-pool
+      - PREFECT_WORK_POOL_NAME=default-agent-pool
       - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
       - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
       - DUCKDB_PATH=/app/data/music_tracker.duckdb
@@ -105,8 +104,8 @@ services:
         sleep 5;
         echo 'Deploying flows...';
         uv run python scripts/orchestrate/deploy_flows.py || echo 'Flow deployment failed, continuing with agent...';
-        echo 'Starting Prefect agent...';
-        prefect agent start -p default-agent-pool
+        echo 'Starting Prefect worker...';
+        prefect worker start --pool default-agent-pool
       "
 
   # PostgreSQL for Prefect
