--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "rws-music"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "dbt-core==1.10.10",
     "dbt-duckdb==1.9.4",
@@ -14,13 +14,13 @@ dependencies = [
     "numpy==1.26.0",
     "pandas==2.2.0",
     "polars==1.9.0",
-    "prefect==2.20.0",
-    "prefect-docker==0.5.0",
+    "prefect==3.4.0",
+    "prefect-docker==0.6.0",
     "pyarrow>=21.0.0",
     "pycountry>=24.6.1",
     "pycountry-convert>=0.7.2",
-    "pydantic==2.9.0",
-    "pydantic-settings==2.5.0",
+    "pydantic>=2.10.0",
+    "pydantic-settings>=2.6.0",
     "pytest==8.3.0",
     "pytest-asyncio==0.23.0",
     "python-dateutil==2.9.0",
