--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,9 +75,9 @@ services:
     restart: unless-stopped
     command: prefect server start --host 0.0.0.0 --port 4200
 
-  prefect-agent:
+  prefect-worker:
     build: .
-    container_name: music-tracker-prefect-agent
+    container_name: music-tracker-prefect-worker
     environment:
       - PREFECT_API_URL=http://prefect-server:4200/api
       - PREFECT_WORK_POOL_NAME=default-agent-pool
@@ -88,6 +88,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
+      - ./scripts:/app/scripts
     networks:
       - music-tracker
     depends_on:
@@ -102,10 +103,42 @@ services:
         done;
         echo 'Prefect server is ready!';
         sleep 5;
-        echo 'Deploying flows...';
-        uv run python scripts/orchestrate/deploy_flows.py || echo 'Flow deployment failed, continuing with agent...';
         echo 'Starting Prefect worker...';
         prefect worker start --pool default-agent-pool
+      "
+
+  prefect-deployer:
+    build: .
+    container_name: music-tracker-prefect-deployer
+    environment:
+      - PREFECT_API_URL=http://prefect-server:4200/api
+      - PREFECT_WORK_POOL_NAME=default-agent-pool
+      - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
+      - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
+      - DUCKDB_PATH=/app/data/music_tracker.duckdb
+      - LOG_LEVEL=INFO
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+      - ./scripts:/app/scripts
+    networks:
+      - music-tracker
+    depends_on:
+      - prefect-worker
+    restart: "no"
+    command: >
+      bash -c "
+        echo 'Waiting for Prefect server to be ready...';
+        until curl -f http://prefect-server:4200/api/health > /dev/null 2>&1; do
+          echo 'Prefect server not ready, waiting...';
+          sleep 5;
+        done;
+        echo 'Prefect server is ready!';
+        echo 'Waiting for worker to be ready...';
+        sleep 15;
+        echo 'Deploying flows...';
+        uv run python scripts/orchestrate/deploy_flows.py;
+        echo 'Flow deployment completed!';
       "
 
   # PostgreSQL for Prefect
