--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
 dependencies = [
+    "black>=25.1.0",
     "dbt-core==1.10.10",
     "dbt-duckdb==1.9.4",
     "duckdb==1.1.0",
