--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
 dependencies = [
-    "black>=25.1.0",
     "dbt-core==1.10.10",
     "dbt-duckdb==1.9.4",
     "duckdb==1.1.0",
@@ -22,12 +21,19 @@ dependencies = [
     "pycountry-convert>=0.7.2",
     "pydantic>=2.10.0",
     "pydantic-settings>=2.6.0",
-    "pytest==8.3.0",
-    "pytest-asyncio==0.23.0",
     "python-dateutil==2.9.0",
     "python-dotenv==1.0.0",
     "requests==2.32.0",
     "rich==13.7.0",
-    "sqlfluff>=3.4.2",
     "structlog==24.1.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "black>=25.1.0",
+    "sqlfluff>=3.4.2",
+]
+test = [
+    "pytest==8.3.0",
+    "pytest-asyncio==0.23.0",
 ]
