--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,6 @@ SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 
 # Database Passwords (Required)
-METABASE_DB_PASSWORD=secure_password_here
 PREFECT_DB_PASSWORD=another_secure_password
 
 # Application Configuration
@@ -26,3 +25,8 @@ LOG_LEVEL=INFO
 MAX_MEMORY_USAGE=1800m  # Keep under 2GB total
 PREFECT_WORKER_MEMORY=300m
 METABASE_MEMORY=512m
+
+# Metabase H2 Database Configuration
+# Metabase now uses H2 embedded database instead of PostgreSQL
+# Database file will be stored in: /home/metabase.db (within metabase-data volume)
+# No separate database container needed
