--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,14 @@
+# Docker Compose configuration for music tracking application
+# Optimized for 2GB RAM Synology NAS deployment with local-only access
+# Memory allocation strategy:
+# - Prefect Server: 400MB (orchestration)
+# - Prefect Worker: 300MB (task execution)
+# - Prefect DB: 200MB (PostgreSQL with tuning)
+# - Metabase: 600MB (JVM with 512MB heap)
+# - Data Pipeline: 400MB (ETL processing)
+# - Total: ~1.9GB (within 2GB budget)
+# Local-only access: Metabase on port 3000, Prefect on port 4200 (LAN access only)
+
 services:
   # Main data processing and dbt service
   data-pipeline:
@@ -18,6 +29,10 @@ services:
     depends_on:
       - metabase
     restart: unless-stopped
+    # Memory limits for 2GB RAM Synology NAS
+    # 400MB max, 250MB reservation for data processing overhead
+    mem_limit: 400m
+    mem_reservation: 250m
 
   # Metabase for reporting
   metabase:
@@ -32,33 +47,18 @@ services:
       - ./data:/data
     env_file: .env
     environment:
-      - MB_DB_TYPE=postgres
-      - MB_DB_DBNAME=metabase
-      - MB_DB_PORT=5432
-      - MB_DB_USER=metabase
-      - MB_DB_PASS=${METABASE_DB_PASSWORD}
-      - MB_DB_HOST=metabase-db
+      - MB_DB_TYPE=h2
+      - MB_DB_FILE=/home/metabase.db
       - MB_PLUGINS_DIR=/home/plugins/
+      - JAVA_OPTS=-Xmx512m -Xms256m -XX:+UseG1GC
     networks:
       - music-tracker
-    depends_on:
-      - metabase-db
     restart: unless-stopped
+    # Memory limits for 2GB RAM Synology NAS
+    # 600MB max, 400MB reservation provides headroom for JVM overhead
+    mem_limit: 600m
+    mem_reservation: 400m
 
-  # PostgreSQL for Metabase metadata
-  metabase-db:
-    image: postgres:15-alpine
-    container_name: music-tracker-metabase-db
-    env_file: .env
-    environment:
-      - POSTGRES_DB=metabase
-      - POSTGRES_USER=metabase
-      - POSTGRES_PASSWORD=${METABASE_DB_PASSWORD}
-    volumes:
-      - metabase-db-data:/var/lib/postgresql/data
-    networks:
-      - music-tracker
-    restart: unless-stopped
 
   # Prefect for orchestration
   prefect-server:
@@ -81,6 +81,9 @@ services:
       - prefect-db
     restart: unless-stopped
     command: prefect server start --host 0.0.0.0 --port 4200
+    # Memory limits for 2GB RAM Synology NAS
+    mem_limit: 400m
+    mem_reservation: 300m
 
   prefect-worker:
     build: .
@@ -102,6 +105,9 @@ services:
     depends_on:
       - prefect-server
     restart: unless-stopped
+    # Memory limits for 2GB RAM Synology NAS
+    mem_limit: 300m
+    mem_reservation: 200m
     command: >
       bash -c "
         echo 'Waiting for Prefect server to be ready...';
@@ -164,10 +170,23 @@ services:
     networks:
       - music-tracker
     restart: unless-stopped
+    # Memory limits for 2GB RAM Synology NAS
+    mem_limit: 200m
+    mem_reservation: 128m
+    # PostgreSQL tuning for minimal memory usage
+    command: >
+      postgres
+      -c max_connections=20
+      -c shared_buffers=64MB
+      -c effective_cache_size=128MB
+      -c maintenance_work_mem=64MB
+      -c wal_buffers=4MB
+      -c max_wal_size=128MB
+      -c min_wal_size=32MB
+      -c log_min_duration_statement=500
 
 volumes:
   metabase-data:
-  metabase-db-data:
   prefect-data:
   prefect-db-data:
 
