fix ingestion scripts. update task-runner.

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,5 @@ dmypy.json
 *.tfvars
 *.tar.gz
 
-# Terraform (historical, no longer used)
-*/.terraform
-*.tfstate
-*.tfstate.backup
-*.tfplan
-.terraform.lock.hcl
+# local env
+zz*
