--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,20 @@ dependencies = [
     "pycountry-convert>=0.7.2",
     "python-dateutil==2.9.0",
     "python-dotenv==1.0.0",
-    "requests==2.32.0",
+    "requests==2.32.5",
     "rich==13.7.0",
+    "sentry-sdk>=2.48.0",
     "structlog==24.1.0",
+    "websockets>=15.0.1",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
+    "ruff>=0.14.10",
     "black>=25.1.0",
     "sqlfluff>=3.4.2",
 ]
+
 test = [
     "pytest==8.3.0",
     "pytest-asyncio==0.23.0",
