update logger. remove timeouts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
       - N8N_SECURE_COOKIE=false
       - WEBHOOK_URL=http://${N8N_HOST:-localhost}:5678/
       - GENERIC_TIMEZONE=${TIMEZONE:-UTC}
+      - EXECUTIONS_TIMEOUT=-1
+      - EXECUTIONS_TIMEOUT_MAX=-1
       - N8N_RUNNERS_ENABLED=true
       - N8N_RUNNERS_MODE=external
       - N8N_RUNNERS_BROKER_LISTEN_ADDRESS=0.0.0.0
@@ -84,6 +86,8 @@ services:
       - N8N_PYTHON_ALLOWED_CODE=*
       - N8N_BLOCK_EXTERNAL_CODE_EXECUTION=false
       - N8N_RUNNERS_TASK_REQUEST_TIMEOUT=1800000
+      - N8N_RUNNERS_TASK_TIMEOUT=3600 
+      - N8N_RUNNERS_TASK_MAX_TIMEOUT=3660
       - PYTHONPATH=/workspace
     volumes:
       - n8n-data:/home/node/.n8n
@@ -123,7 +127,8 @@ services:
       - N8N_PYTHON_ALLOWED_CODE=*
       - N8N_BLOCK_EXTERNAL_CODE_EXECUTION=false
       - N8N_RUNNERS_TASK_REQUEST_TIMEOUT=1800000
-      # Explicitly pass Spotify credentials to the Python execution environment
+      - N8N_RUNNERS_TASK_TIMEOUT=3600 
+      - N8N_RUNNERS_TASK_MAX_TIMEOUT=3660 
       - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
       - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
       - SPOTIFY_REFRESH_TOKEN=${SPOTIFY_REFRESH_TOKEN}
