--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -21,9 +21,13 @@ models:
     +materialized: table
     intermediate:
       +schema: intermediate
+      +materialized: view
     stage:
       +schema: stage
       +materialized: view
+    dw:
+      +schema: dw
+      +materialized: table
 
 seeds:
   +full_refresh: True
