--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,7 @@ services:
       - SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
       - SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
       - SPOTIFY_REFRESH_TOKEN=${SPOTIFY_REFRESH_TOKEN}
+      - DUCKDB_MEMORY_LIMIT=800MB
     volumes:
       - ./.env:/workspace/.env:ro
       - ./data:/workspace/data
@@ -145,8 +146,8 @@ services:
       - music-tracker
     depends_on:
       - n8n
-    mem_limit: 512m
-    mem_reservation: 256m
+    mem_limit: 1024m
+    mem_reservation: 512m
 
 volumes:
   metabase-data:
