--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ name = "rws-music"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.11"
 dependencies = [
     "dbt-core==1.10.10",
     "dbt-duckdb==1.10.0",
-    "duckdb==1.4.3",
+    "duckdb==1.3.2",
     "httpx==0.27.0",
     "musicbrainzngs==0.7.1",
-    "polars==1.9.0",
+    "polars>=1.36.1",
     "pyarrow>=21.0.0",
     "pycountry>=24.6.1",
     "pycountry-convert>=0.7.2",
