--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "duckdb==1.3.2",
     "httpx==0.27.0",
     "musicbrainzngs==0.7.1",
-    "polars>=1.36.1",
+    "polars-lts-cpu>=1.34.0b1",
     "pyarrow>=21.0.0",
     "pycountry>=24.6.1",
     "pycountry-convert>=0.7.2",
